[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MIABIS_on_FHIR"
version = "0.1.2"
description = "Library containing classes for easier handling of data according to the MIABIS on FHIR profile"
readme = "README.md"
authors = [{"name" = "Simon Konar", "email" = "simon.konar@gmail.com"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["MIABIS", "FHIR", "model" , "profile", "data", "handling"]
dependencies = [
    "simple-icd-10 >= 2.0.0",
    "fhirclient >= 4.2.1"
]
requires-python = ">=3.11"

[project.optional-dependencies]
 test=["requests >= 2.32.0"]


[tool.setuptools.packages.find]
exclude =["test*"]